api-project/authors-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: authors-api
spec:
  replicas: 3
  selector:
    matchLabels:
      app: authors-api
  template:
    metadata:
      labels:
        app: authors-api
    spec:
      containers:
      - name: authors-api-container
        image: aviadyarkoni/authorapi:latest
        ports:
        - containerPort: 8080
