api-project/authors-cluster-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: authors-cluster-service
spec:
  type: ClusterIP
  selector:
    app: authors-api
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
