api-project/books-cluster-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: books-cluster-service
spec:
  type: ClusterIP
  selector:
    app: Books-api
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
